# MKR1

DatasetRecorder/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  datasetrecorder.cpp  recorder
DatasetRecorder/Dataset/: advanceData.arff  codebook.txt  data.arff  gestureData.arff  returnData.arff  zoomInData.arff  zoomOutData.arff
FANN_Image/: CMakeCache.txt  CMakeLists.txt  Kinect.h  Makefile  NeuralNetwork.hpp  cmake_install.cmake  main.cpp  neuralnetwork
FANN_Image/Data/: lh_temp.txt  rh_temp.txt
InterfaceTeste/: .opengl.cpp.swp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  opengl  opengl.cpp
KeyboardInput/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  keyboard  keyboard.cpp
ONI_Reader/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  oni_reader  oni_reader.cpp
ONI_Reader/Dataset/: data.arff
Prototipo/: .main.cpp.swp  main  main.cpp
SetGenerator/: CMakeCache.txt  CMakeLists.txt  Makefile  SetGenerator  SetGenerator.cpp  cmake_install.cmake
main/: CMakeCache.txt  HMM.h  HMM.hpp  Kinect.h  Kinect.hpp  NeuralNetwork.hpp  kmeans.h  kmeans.hpp  main.cpp  tcc
main/Data/: advance.hmm  return.hmm  zoomIn.hmm  zoomOut.hmm
main/Dataset/: advanceData.txt  codebook.txt  returnData.txt  zoomInData.txt  zoomOutData.txt
skeleton/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  skeleton  skeleton.cpp
