cmake_minimum_required(VERSION 2.8)
project( oni_reader )
find_package( OpenCV REQUIRED )
FIND_PATH( OPENNI_INCLUDE "XnOpenNI.h" "OpenNIConfig.h" HINTS "$ENV{OPEN_NI_INCLUDE}" "/usr/include/ni/")
FIND_LIBRARY( OPENNI_LIBRARY NAMES OpenNI libOpenNI HINTS $ENV{OPENNI_LIB} "/usr/lib")
LINK_DIRECTORIES($ENV{OPENNI_LIB})
INCLUDE_DIRECTORIES( ${OPENNI_INCLUDE} )
LINK_LIBRARIES(${OPENNI_LIBRARY})
add_executable( oni_reader oni_reader.cpp )
target_link_libraries( oni_reader ${OpenCV_LIBS} )
target_link_libraries( oni_reader ${OPENNI_LIBRARIES} )
