cmake_minimum_required(VERSION 2.8)
project( skeleton )
find_package( OpenCV REQUIRED )
FIND_PATH( OPENNI_INCLUDE "XnOpenNI.h" "OpenNIConfig.h" HINTS "$ENV{OPEN_NI_INCLUDE}" "/usr/include/ni/")
FIND_LIBRARY( OPENNI_LIBRARY NAMES OpenNI libOpenNI HINTS $ENV{OPENNI_LIB} "/usr/lib")
LINK_DIRECTORIES($ENV{OPENNI_LIB})
INCLUDE_DIRECTORIES( ${OPENNI_INCLUDE} )
LINK_LIBRARIES(${OPENNI_LIBRARY})
add_executable( skeleton skeleton.cpp)
target_link_libraries( skeleton ${OpenCV_LIBS} )
target_link_libraries( skeleton ${OPENNI_LIBRARIES} )
